--- a/jspPro2/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/jspPro2/WebContent/WEB-INF/commandHandlerURI.properties
@@ -24,7 +24,8 @@
 /board/download.do=board.command.DownloadController
 
 #ajax
-#dupulicateIdChek
+#dupulicateIdCheck
+/member/idCheck.do=member.command.idCheckHandler
 
 
 
