--- a/jspPro2/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/jspPro2/WebContent/WEB-INF/commandHandlerURI.properties
@@ -6,6 +6,7 @@
 #member  #book
 /join.do=member.command.JoinHandler
 /changePwd.do=member.command.ChangePwdHandler
+/member/search.do=member.command.SearchHandler
 
 #p673
 /article/write.do=article.command.WriteArticleHandler
@@ -25,7 +26,7 @@
 
 #ajax
 #dupulicateIdCheck
-/member/idCheck.do=member.command.idCheckHandler
+#/member/idCheck.do=member.command.idCheckHandler
 
 
 
