--- a/jspPro2/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/jspPro2/WebContent/WEB-INF/commandHandlerURI.properties
@@ -25,8 +25,10 @@
 /board/download.do=board.command.DownloadController
 
 #ajax
-#dupulicateIdCheck
-#/member/idCheck.do=member.command.idCheckHandler
+#duplicateIdCheck
+/member/idCheck.do=member.command.IdCheckHandler
+#dynamic select
+/sidoSelect.do=common.command.SidoSelectController
 
 
 
