--- a/jspPro2/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/jspPro2/WebContent/WEB-INF/commandHandlerURI.properties
@@ -31,7 +31,11 @@
 /sidoSelect.do=common.command.SidoSelectController
 
 
-
+#comment
+#/comment/write.do=comment.command.WriteCommentHandler
+/comment/list.do=comment.command.ListCommentHandler
+/comment/modify.do=comment.command.ModifyCommentHandler
+#/comment/delete.do=comment.command.DeleteCommentHandler
 
 
 
